[gd_scene load_steps=4 format=3 uid="uid://cdovud5xoqkk8"]

[ext_resource type="Script" path="res://OverWorldCMDS/Inventory/inventoryUI/inverntoryUI.gd" id="1_prrjg"]
[ext_resource type="PackedScene" uid="uid://dhss2c4y1ikyd" path="res://OverWorldCMDS/Inventory/inventoryUI/inventoryUISlot/inventory_ui_slot.tscn" id="2_oqcyk"]

[sub_resource type="CanvasTexture" id="CanvasTexture_jsx28"]
specular_color = Color(0, 0, 0, 1)

[node name="inverntoryUI" type="Control"]
custom_minimum_size = Vector2(87, 43)
layout_mode = 3
anchors_preset = 0
offset_right = 130.0
offset_bottom = 43.0
script = ExtResource("1_prrjg")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 42.0
texture = SubResource("CanvasTexture_jsx28")
region_rect = Rect2(0, 0, 1, 0)

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -20.0
offset_right = 42.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="inventoryUiSlot" parent="NinePatchRect/GridContainer" instance=ExtResource("2_oqcyk")]
layout_mode = 2

[node name="inventoryUiSlot2" parent="NinePatchRect/GridContainer" instance=ExtResource("2_oqcyk")]
layout_mode = 2

[node name="inventoryUiSlot3" parent="NinePatchRect/GridContainer" instance=ExtResource("2_oqcyk")]
layout_mode = 2

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.7

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
